--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,37 +1,36 @@
-name: Deploy to S3
+name: Build and Deploy Android App
 
 on:
   push:
     branches:
-      - main  # main, feature-ci-cd 브랜치에 푸시될 때마다 실행
-      - feature-ci-cd
+      - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install Node.js
-      uses: actions/setup-node@v3
+    - name: Set up JDK
+      uses: actions/setup-java@v3
       with:
-        node-version: '14'  # Node.js 버전
+        java-version: '11'
 
     - name: Install dependencies
       run: |
         npm install
 
-    - name: Build React Native project
+    - name: Build Android App
       run: |
-        npm run build  # 프로젝트에 맞게 수정
+        cd android
+        ./gradlew assembleRelease
 
-    - name: Sync files to S3
+    - name: Upload to S3
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
       run: |
-        aws s3 sync ./build s3://chat-todo --delete --acl public-read
-
+        aws s3 cp ./android/app/build/outputs/apk/release/app-release.apk s3://chat-todo/ --acl public-read
