--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.8.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.13"
   },
