--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.8.0",
     "moment": "^2.30.1",
@@ -18,8 +19,10 @@
     "react-native-calendars": "^1.1306.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-splash-screen": "^3.3.0",
     "styled-component": "^2.8.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
