--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.8.0",
+    "axios": "^1.7.7",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
