--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-splash-screen": "^3.3.0",
     "styled-component": "^2.8.0",
