--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-safe-area-context": "^4.10.9",
     "react-native-splash-screen": "^3.3.0",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.13",
